--- a/result/2021-12-22.md
+++ b/result/2021-12-22.md
@@ -51,3 +51,4 @@
 51. [西安流调](https://s.weibo.com//weibo?q=%E8%A5%BF%E5%AE%89%E6%B5%81%E8%B0%83&Refer=top) 193904
 52. [被陌生人治愈到的瞬间](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E9%99%8C%E7%94%9F%E4%BA%BA%E6%B2%BB%E6%84%88%E5%88%B0%E7%9A%84%E7%9E%AC%E9%97%B4%23&Refer=top) 168017
 53. [大熊猫社恐的样子也太可爱了](https://s.weibo.com//weibo?q=%E5%A4%A7%E7%86%8A%E7%8C%AB%E7%A4%BE%E6%81%90%E7%9A%84%E6%A0%B7%E5%AD%90%E4%B9%9F%E5%A4%AA%E5%8F%AF%E7%88%B1%E4%BA%86&Refer=top) 165189
+54. [2021酒后迷惑行为大赏](https://s.weibo.com//weibo?q=%232021%E9%85%92%E5%90%8E%E8%BF%B7%E6%83%91%E8%A1%8C%E4%B8%BA%E5%A4%A7%E8%B5%8F%23&Refer=top) 78797
