--- a/result/2021-12-23.md
+++ b/result/2021-12-23.md
@@ -57,3 +57,4 @@
 57. [穿搭万能配色公式](https://s.weibo.com//weibo?q=%23%E7%A9%BF%E6%90%AD%E4%B8%87%E8%83%BD%E9%85%8D%E8%89%B2%E5%85%AC%E5%BC%8F%23&Refer=top) 193208
 58. [终于找到了滑雪的秘诀](https://s.weibo.com//weibo?q=%23%E7%BB%88%E4%BA%8E%E6%89%BE%E5%88%B0%E4%BA%86%E6%BB%91%E9%9B%AA%E7%9A%84%E7%A7%98%E8%AF%80%23&Refer=top) 137840
 59. [南京震感](https://s.weibo.com//weibo?q=%E5%8D%97%E4%BA%AC%E9%9C%87%E6%84%9F&Refer=top) 58596
+60. [2021你有哪些骄傲时刻](https://s.weibo.com//weibo?q=%232021%E4%BD%A0%E6%9C%89%E5%93%AA%E4%BA%9B%E9%AA%84%E5%82%B2%E6%97%B6%E5%88%BB%23&Refer=top) 50744
