--- a/result/2021-12-23.md
+++ b/result/2021-12-23.md
@@ -69,3 +69,4 @@
 69. [樊振东陈梦年终世界第一](https://s.weibo.com//weibo?q=%23%E6%A8%8A%E6%8C%AF%E4%B8%9C%E9%99%88%E6%A2%A6%E5%B9%B4%E7%BB%88%E4%B8%96%E7%95%8C%E7%AC%AC%E4%B8%80%23&Refer=top) 93958
 70. [原来冰激凌是这样生产的](https://s.weibo.com//weibo?q=%23%E5%8E%9F%E6%9D%A5%E5%86%B0%E6%BF%80%E5%87%8C%E6%98%AF%E8%BF%99%E6%A0%B7%E7%94%9F%E4%BA%A7%E7%9A%84%23&Refer=top) 90857
 71. [2021你有哪些骄傲时刻](https://s.weibo.com//weibo?q=%232021%E4%BD%A0%E6%9C%89%E5%93%AA%E4%BA%9B%E9%AA%84%E5%82%B2%E6%97%B6%E5%88%BB%23&Refer=top) 53874
+72. [无锡震感](https://s.weibo.com//weibo?q=%E6%97%A0%E9%94%A1%E9%9C%87%E6%84%9F&Refer=top) 50729
